[Chore #137382339] Fixed missing background url error

--- a/wger/software/static/css/agency.css
+++ b/wger/software/static/css/agency.css
@@ -582,7 +582,6 @@ aside.clients img {
 }
 section#contact {
   background-color: #222222;
-  background-image: url('../img/map-image.png');
   background-position: center;
   background-repeat: no-repeat;
 }
